use sonarqube advice 8